--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h3 class="info js_info">Vamos a jugar</h3>
         <p class="gamer js_gamer">Jugador:0</p>
         <p class="computer js_computer">Computadora:0</p>
+        <p class="js_result"></p>
     </main>
     <script src="./main.js"></script>
 </body>
