--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <p class="computer js_computer">Computadora:0</p>
         <p class="js_result"></p>
     </main>
+    <footer>
+        <img class="images" src="./images/7ADE4412-DD5C-40C6-8558-6B419674FB13_4_5005_c.jpeg" alt="icono dej juego">
+    </footer>
     <script src="./main.js"></script>
+
 </body>
 </html>
