--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     
         <form class="form">
         <select class="js_gameSelect">
-            <option>Seleccione su jugada</option>
+            
+            <option disabled selected>Seleccione su jugada</option>
             <option value="piedra">Piedra</option>
             <option value="papel">Papel</option>
             <option value="tijeras">Tijeras</option>
